@@ -1,6 +1,6 @@
 Begin4
 Title: procps
-Version: 3.0.1
+Version: 3.0.2
 Entered-date: 2002-10-10
 Description: Linux system utilities
 Keywords: procps /proc libproc sysctl
@@ -8,8 +8,8 @@ Keywords: procps /proc libproc sysctl
 Author: Albert Cahalan, Michael K. Johnson, Jim Warner, etc.
 Maintained-by: various <procps-feedback@lists.sf.net>
 Primary-site: http://procps.sf.net/
-	230kB procps-3.0.1.tar.gz
+	230kB procps-3.0.2.tar.gz
 Alternate-site: http://www.debian.org/Packages/unstable/base/procps.html
-	230kB procps-3.0.1.tar.gz
+	230kB procps-3.0.2.tar.gz
 Copying-policy: mixed
 End
